fix: headings, extra variables, block overflow etc

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,29 +9,15 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --main-font: 'IBM Plex mono', monospace;
   --main-text-color:#F1B2CE;
   --main-font-size: 18px;
   --title-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
   --heading-color: #db00ff;
   --accent-color: #ff0070;
+  --accent-color-title: #ff0070;
+  --accent-color-menu: #ff0070;
   --bg-header-button: transparent;
   --border-button-hover: #FF007066;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-  font-family: var(--main-font);
-  color: var(--main-text-color);
-  font-size: var(--main-font-size);
-  font-weight: 400;
-  line-height: 1.3;
-  letter-spacing: 0;
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  overflow: auto;
-}
