--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,6 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --main-font: 'IBM Plex mono', monospace;
   --main-text-color: #353430;
   --main-font-size: 18px;
   --title-color: #353430;
@@ -17,58 +16,20 @@
   --bg-color: #fff1f7;
   --heading-color: #ffc2e6;
   --accent-color: #ff8dcb;
+  --accent-color-title:#353430;
   --accent-color-footer: #ff0070;
-  --accent-color-button: #353430;
+  --accent-color-menu: #353430;
   --bg-header-button: transparent;
   --border-button-hover: #32312D66;
   --rectangle-color: #353430;
-}
-
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-  font-family: var(--main-font);
-  color: var(--main-text-color);
-  font-size: var(--main-font-size);
-  font-weight: 400;
-  line-height: 1.3;
-  letter-spacing: 0;
-  background-color: var(--bg-color: #fff1f7);
-  overflow: auto;
 }
 
 .theme-light .rec__icon {
   display: none;
 }
 
-.theme-light .decorated-zone::before {
-  border-inline-end: 1px solid var(--rectangle-color);
-  border-block-start: 1px solid var(--rectangle-color);
-}
-
-.theme-light .decorated-zone::after {
-  border-block-end: 1px solid var(--rectangle-color);
-  border-inline-start: 1px solid var(--rectangle-color);
-}
-
-.theme-light .header__theme-menu-button {
-  color: var(--main-text-color);
-}
-
-.theme-light .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color-button);
-}
-
-.theme-light .footer__heading {
-  text-shadow: 2px 2px 0 var(--accent-color-footer);
-}
-
-.theme-light .section_title {
-  color: var(--title-color);
-}
-
 @media (prefers-color-scheme: light) {
   :root {
-  --main-font: 'IBM Plex mono', monospace;
   --main-text-color: #353430;
   --main-font-size: 18px;
   --title-color: #353430;
@@ -76,10 +37,15 @@
   --bg-color: #fff1f7;
   --heading-color: #ffc2e6;
   --accent-color: #ff8dcb;
+  --accent-color-title: #353430;
   --accent-color-footer: #ff0070;
-  --accent-color-button: #353430;
+  --accent-color-menu: #353430;
   --bg-header-button: transparent;
   --border-button-hover: #32312D66;
   --rectangle-color: #353430;
+  }
+
+  .rec__icon {
+    display: none;
   }
 }
