--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,6 +11,8 @@
 --bg-color: #000028;
 --heading-color: #db00ff;
 --accent-color: #ff0070;
+--accent-color-title: #ff0070;
+--accent-color-menu: #ff0070;
 --bg-header-button: transparent;
 --border-button-hover: #FF007066;
 }
